--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
+    "react-favicon": "^2.0.3",
     "react-redux": "^8.1.3",
     "react-scripts": "5.0.1",
     "redux": "^4.2.1",
@@ -46,6 +47,7 @@
   "devDependencies": {
     "css": "^3.0.0",
     "tailwind": "^4.0.0",
+    "tailwind-scrollbar": "^3.0.5",
     "tailwindcss": "^3.3.3"
   }
 }
